<resources>
    <string name="app_name">Valuation Register</string>
    <string name="app_prefs">VALUATION_REGISTER</string>
    <string name="title_activity_main">Valuation Register</string>
    <string name="action_settings">Settings</string>
    <string name="action_browse">Existing Data</string>




    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_upload">Upload</string>
    <string name="error_invalid_login">Invalid username or password</string>
    <string name="error_blocked_login">Error your account has been blocked, please contact your administrator</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_missing">You must select a court and provide at least one image</string>
    <string name="h_confirm_action">Confirm Action</string>
    <string name="p_confirm_exit">Are you sure you want to logout ?</string>
    <string name="p_confirm_close_app">Are you sure you want to exit the application ?</string>
    <string name="p_confirm_close">Any data you have not save will be deleted. \nAre you sure you want to exit ?</string>
    <string name="p_inform_close">The application will exit in order for changes to take effect, you will need to re-open the application to continue</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="view_settings">Settings</string>
    <string name="password">Password</string>
    <string name="prompt_confirm_password">Confirm your new password</string>
    <string name="prompt_current_password">Enter your current password</string>

    <!-- Dialog Headers -->
    <string name="h_login_failure">Login Failed</string>
    <string name="h_exit_form">Exit Form ?</string>
    <string name="h_error_details">Error</string>
    <string name="h_results">Results</string>
    <string name="h_confirm_exit">Confirm Action</string>
    <string name="offline_authentication_y">Attempt to login without network</string>
    <string name="offline_authentication_n">Can not login without network</string>
    <string name="confirm_exit">Are you sure you want to close this form</string>
    <string name="gps_missing">You must enable GPS to continue</string>
    <string name="h_tag_location">Location Missing</string>
    <string name="location_missing">Press OK retry to acquire location</string>
    <string name="api_url">System URL</string>
    <string name="h_incomplete_form">Incomplete Form</string>
    <string name="h1_form_text">Provide the required details to complete the valuation registration form…</string>
    <string name="h_important"></string>

    <!-- Menu Strings -->
    <string name="action_logout">Logout</string>
    <string name="action_profile">My Profile</string>
    <string name="action_about">About</string>
    <string name="action_continue">Continue</string>



    <!-- Dialog messages -->
    <string name="loader_text">Loading&#8230;</string>
    <string name="loader_verification_text">Verifying user account&#8230;</string>
    <string name="wait_text">Please wait&#8230;</string>
    <string name="offline_upload">Network is unavailable for data submission</string>
    <string name="offline_stored">Network is unavailable data will be stored in your device for later data submission</string>
    <string name="data_uploaded">All data has been successfully uploaded</string>
    <string name="p_incomplete_form">You must complete all the required fields in order to continue</string>



    <!-- Response Code -->
    <string name="rsp00">Form submitted successfully </string>
    <string name="rsp09">Request in progress</string>
    <string name="rsp26">Duplicate record</string>
    <string name="rsp30">Invalid message format</string>
    <string name="rsp63">Security violation</string>
    <string name="rsp75">Invalid Username or Password</string>
    <string name="rsp76">Offline login not enabled for this device</string>
    <string name="rsp91">Service provider unavailable</string>
    <string name="rsp92">Routing error</string>
    <string name="rsp93">Violation of law</string>
    <string name="rsp94">Duplicate transaction</string>
    <string name="rsp96">System malfunction</string>
    <string name="rspUnkown">Unknown terminal response code</string>
    <string name="select_land_plot">Select land plot</string>
    <string name="property_accessibility">How can one access your property ?</string>
    <string name="select_street">Select street</string>
    <string name="notable_landmarks">What are notable landmarks in the neighborhood</string>
    <string name="accessibility_road_name">Please mention the name of the road(s)</string>
    <string name="is_neighbour_of_valuable_project">Any on-going project expected to affect value of property ?</string>
    <string name="project_name">Please provide the name of the project</string>
    <string name="road_infrastructure_quality">Road/Infrastructure Quality</string>
    <string name="has_title">Do you have a Title (Certificate of Right of Occupancy)</string>
    <string name="when_was_the_title_acquired">When was the title acquired ?</string>
    <string name="plot_size">Plot size</string>
    <string name="land_use">Land use</string>
    <string name="property_size">Property size</string>
    <string name="accommodation_details">What other rooms are in your property ?</string>
    <string name="land_development_status">Land development status</string>
    <string name="number_of_buildings_on_plot">Number of buildings on plot</string>
    <string name="building_types">What are the building(s) ?</string>
    <string name="servant_quarter_size">Servant Quarter Size</string>
    <string name="has_mortgage">Have you taken mortgage/credit facility ?</string>
    <string name="mortgage_amount">Mortgage/credit facility amount</string>
    <string name="services_amenities_in_plot">Services/amenities available in plot</string>
    <string name="other_services_amenities">Other services/amenities</string>
    <string name="plot_purchase_year">Plot purchase year</string>
    <string name="howLandWasAcquired">How did you get your land ?</string>
    <string name="howMuchWasPaidToAcquireLand">How much did you pay for your plot ?</string>
    <string name="other_ways_land_was_acquired">Other ways you acquired the land</string>
    <string name="land_acquisition_source_of_funds">Source of funds for plot acquisition</string>
    <string name="other_source_of_funds_for_plot_acquisition">Other source of funds for plot acquisition</string>
    <string name="source_of_info_for_plot_acquisition">Source of information for plot acquisition</string>
    <string name="is_aware_of_sale_text_view">Are you aware of sale of land/property within your neighborhood ?</string>
    <string name="type_of_sale">What was sold ?</string>
    <string name="selling_price">What was the selling price ?</string>
    <string name="other_sources_of_info_for_plot_acquisition">Other sources of info. for plot acquisition</string>
    <string name="property_condition">Property condition</string>
    <string name="confirm_heading">Data submission confirmation</string>
    <string name="confirm_paragraph">This action can not be reversed, Are you sure you want to submit this data ?</string>
    <string name="search">Search</string>
</resources>